<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListViewMenu">

    <TextView
        android:id="@+id/TituloTelaMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TituloTelaMenu"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BotaoEditar"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginTop="60dp"
        android:onClick="EditarCadastro"
        android:text="@string/BotaoEditar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TituloTelaMenu" />

    <Button
        android:id="@+id/BotaoRemover"
        android:layout_width="120dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:onClick="RemoverVeiculo"
        android:text="@string/BotaoRemover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotaoEditar" />

    <Button
        android:id="@+id/botaoCombustivel"
        android:layout_width="140dp"
        android:layout_height="63dp"
        android:layout_marginTop="32dp"
        android:onClick="ChamarTelaAbastecimento"
        android:text="@string/BotaoCombustivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotaoRemover" />

    <Button
        android:id="@+id/ListarCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="ListarAbastecimentos"
        android:text="@string/BotaoListaCombustivel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoCombustivel" />
</android.support.constraint.ConstraintLayout>