<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/BotaoSalvar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Combustivel">

    <TextView
        android:id="@+id/TituloCombustivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/TituloTelaAbastecimento"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Litros"
        android:layout_width="116dp"
        android:layout_height="80dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/HintLitros"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TituloCombustivel" />

    <EditText
        android:id="@+id/Valor"
        android:layout_width="116dp"
        android:layout_height="80dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/HintValor"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.341"
        app:layout_constraintStart_toEndOf="@+id/Litros"
        app:layout_constraintTop_toBottomOf="@+id/TituloCombustivel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="54dp"
        android:layout_marginTop="292dp"
        android:onClick="SalvarGas"
        android:text="@string/BotaoSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TituloCombustivel" />

</android.support.constraint.ConstraintLayout>